--- a/tagpage2.html
+++ b/tagpage2.html
@@ -7,7 +7,7 @@
 
     <!-- CSS-stylesheets -->
     <link rel="stylesheet" href="tagpage2.css">
-    <link rel="icon" type="favicon" href="Images\favicon-1.png">
+    <link rel="icon" type="favicon" href="favicon-1.png">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,13 +24,13 @@
 <body>
     <div id="main-container">
         <header class="header-container">
-            <a href="index.html"><img class="logo" src="images/Logo-1.png" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="Logo-1.png" alt="logo"></a>
 
             <div class="search-box">
                 <div class="search">
                 <input type="text" class="search-input"
                 placeholder="오늘의 무 값은?">
-                <button class="search-btn"><a class="search-icon-a" href="index2.html"><img class="search-icon" src="Images\search-icon.png" alt="search-icon"></a></button>
+                <button class="search-btn"><a class="search-icon-a" href="index2.html"><img class="search-icon" src="search-icon.png" alt="search-icon"></a></button>
                 </div>
               </div>
 
@@ -53,10 +53,10 @@
 
             <div class="stats-container">
                 <div class="flex-img1">
-                   <a href="tagpage2.html"><img class="stats-1" src="images/Veteran-tagpic-3.png" alt="stats-1"></a>
+                   <a href="tagpage2.html"><img class="stats-1" src="Veteran-tagpic-3.png" alt="stats-1"></a>
                 </div>
                 <div class="flex-img2">
-                   <a href="tagpage2.html"><img class="stats-1" src="images/Veteran-tagpic-4.png" alt="stats-2"></a>
+                   <a href="tagpage2.html"><img class="stats-1" src="Veteran-tagpic-4.png" alt="stats-2"></a>
                 </div>
             </div>
 
