--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <title>로그인</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,700'>
   <link rel="stylesheet" href="./loginstyles.css">
-  <link rel="icon" type="favicon" href="Images/cart-favicon.png">
+  <link rel="icon" type="favicon" href="favicon-1.png">
 </head>
 <!-- partial:index.partial.html -->
 <div class="login-form">
