--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- CSS-stylesheets -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="favicon" href="favicon-1.png">
+    <link rel="icon" type="favicon" href="images/favicon-1.png">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
 <body>
     <div id="main-container">
         <header class="header-container">
-            <a href="index.html"><img class="logo" src="Logo-1.png" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="images/Logo-1.png" alt="logo"></a>
         </header>
         
         <!-- <nav class="nav-container">
@@ -52,7 +52,7 @@
                 <div class="search">
                 <input type="text" class="search-input"
                 placeholder="오늘의 무 값은?">
-                <button class="search-btn"><a class="search-icon-a" href="index2.html" target="_blank"><img class="search-icon" src="search-icon.png" alt="search-icon"></a></button>
+                <button class="search-btn"><a class="search-icon-a" href="index2.html" target="_blank"><img class="search-icon" src="images/search-icon.png" alt="search-icon"></a></button>
                 </div>
               </div>
             <div class="tag-container">
@@ -68,7 +68,7 @@
             <!-- Images-control-start -->
 
             <div class="images-section">
-                <img class="img-section" src="Vegatables-png-1.png" alt="Veteran.png">
+                <img class="img-section" src="images/Vegatables-png-1.png" alt="Veteran.png">
             </div>
 
             <!-- Images-control-end -->
