--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 
     <!-- CSS-stylesheets -->
     <link rel="stylesheet" href="styles2.css">
-    <link rel="icon" type="favicon" href="favicon-1.png">
+    <link rel="icon" type="favicon" href="images/favicon-1.png">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
 <body>
     <div id="main-container">
         <header class="header-container">
-            <a href="index.html"><img class="logo" src="Logo-1.png" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="images/Logo-1.png" alt="logo"></a>
 
             <div class="search-box">
                 <div class="search">
@@ -53,10 +53,10 @@
 
             <div class="stats-container">
                 <div class="flex-img1">
-                   <a href="index3.html" target="_blank"><img class="stats-1" src="Veteran-pics-1.png" alt="stats-1"></a>
+                   <a href="index3.html" target="_blank"><img class="stats-1" src="images/Veteran-pics-1.png" alt="stats-1"></a>
                 </div>
                 <div class="flex-img2">
-                   <a href="index3.html" target="_blank"><img class="stats-1" src="Veteran-pics-2.png" alt="stats-2"></a>
+                   <a href="index3.html" target="_blank"><img class="stats-1" src="images/Veteran-pics-2.png" alt="stats-2"></a>
                 </div>
             </div>
 
