--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
 
     <!-- CSS-stylesheets -->
     <link rel="stylesheet" href="styles3.css">
-    <link rel="icon" type="favicon" href="favicon-1.png">
+    <link rel="icon" type="favicon" href="images/favicon-1.png">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,13 +24,13 @@
 <body>
     <div id="main-container">
         <header class="header-container">
-            <a href="index.html"><img class="logo" src="Logo-1.png" alt="logo"></a>
+            <a href="index.html"><img class="logo" src="images/Logo-1.png" alt="logo"></a>
 
             <div class="search-box">
                 <div class="search">
                 <input type="text" class="search-input"
                 placeholder="오늘의 무 값은?">
-                <button class="search-btn"><a class="search-icon-a" href="index3.html"><img class="search-icon" src="search-icon.png" alt="search-icon"></a></button>
+                <button class="search-btn"><a class="search-icon-a" href="index3.html"><img class="search-icon" src="images/search-icon.png" alt="search-icon"></a></button>
                 </div>
               </div>
 
@@ -39,27 +39,27 @@
         <section class="section-container">
 
             <div class="icon-container">
-                <img class="apple-icon" src="apple-pic.png" alt="apple-icon">
+                <img class="apple-icon" src="images/apple-pic.png" alt="apple-icon">
                 <p class="icon-text"><b>사과 (상품)</b><br>사과(1kg)</p>
             </div>
             
         
 
             <div stats-container> 
-                <img class="stats-img1" src="Veteran-pics-3.png" alt="stats-3">
+                <img class="stats-img1" src="images/Veteran-pics-3.png" alt="stats-3">
                 <!-- <div class="flex-stats1"></div> -->
-                <img class="stats-img2" src="Veteran-pics-4.png" alt="stats-4">
+                <img class="stats-img2" src="images/Veteran-pics-4.png" alt="stats-4">
                 <!-- <div class="flex-stats2"></div> -->
             </div>
 
             <div class="markets-container">
                 <div class="flex-markets">
-                <a><img class="markets-img" src="Markets-1.png" alt="Markets-1"></a>
-                <!-- <a href="https://www.coupang.com/vp/products/324286997?itemId=1038296605&vendorItemId=5493710543&src=1191000&spec=10999999&addtag=400&ctag=324286997&lptag=CFM08120799&itime=20221203193626&pageType=PRODUCT&pageValue=324286997&wPcid=39224757413371052036062&wRef=&wTime=20221203193626&redirect=landing&sharesource=&style=&isshortened=&settlement=N&isAddedCart=" target="_blank"><img class="markets-img" src="Markets-2.png" alt="Markets-2"></a> -->
-                <a href="https://www.nonghyupmall.com/BC14010R/viewDetail.nh?wrsC=4029675786&basketCnt=0&cdnAplYn=N" target="_blank"><img class="markets-img" src="Markets-3.png" alt="Markets-3"></a>
-                <a href="https://www.ssg.com/item/itemView.ssg?itemId=1000029178261&siteNo=6001&salestrNo=6005&tlidSrchWd=%EC%82%AC%EA%B3%BC&srchPgNo=1&src_area=ssglist&advertBidId=1000115011&advertExtensTeryDivCd=10" target="_blank"><img class="markets-img" src="Markets-4.png" alt="Markets-4"></a>
-                <a href="https://front.homeplus.co.kr/item?itemNo=10000301580294&storeType=DS&utm_source=google&utm_medium=cpc&utm_campaign=pmax_MMR&utm_content=awareness_26" target="_blank"><img class="markets-img" src="Markets-5.png" alt="Markets-5"></a>
-                <!-- <a href="https://www.kurly.com/goods/5035040" target="_blank"><img class="markets-img" src="Markets-6.png" alt="Markets-6"></a> -->
+                <a><img class="markets-img" src="images/Markets-1.png" alt="Markets-1"></a>
+                <!-- <a href="https://www.coupang.com/vp/products/324286997?itemId=1038296605&vendorItemId=5493710543&src=1191000&spec=10999999&addtag=400&ctag=324286997&lptag=CFM08120799&itime=20221203193626&pageType=PRODUCT&pageValue=324286997&wPcid=39224757413371052036062&wRef=&wTime=20221203193626&redirect=landing&sharesource=&style=&isshortened=&settlement=N&isAddedCart=" target="_blank"><img class="markets-img" src="images/Markets-2.png" alt="Markets-2"></a> -->
+                <a href="https://www.nonghyupmall.com/BC14010R/viewDetail.nh?wrsC=4029675786&basketCnt=0&cdnAplYn=N" target="_blank"><img class="markets-img" src="images/Markets-3.png" alt="Markets-3"></a>
+                <a href="https://www.ssg.com/item/itemView.ssg?itemId=1000029178261&siteNo=6001&salestrNo=6005&tlidSrchWd=%EC%82%AC%EA%B3%BC&srchPgNo=1&src_area=ssglist&advertBidId=1000115011&advertExtensTeryDivCd=10" target="_blank"><img class="markets-img" src="images/Markets-4.png" alt="Markets-4"></a>
+                <a href="https://front.homeplus.co.kr/item?itemNo=10000301580294&storeType=DS&utm_source=google&utm_medium=cpc&utm_campaign=pmax_MMR&utm_content=awareness_26" target="_blank"><img class="markets-img" src="images/Markets-5.png" alt="Markets-5"></a>
+                <!-- <a href="https://www.kurly.com/goods/5035040" target="_blank"><img class="markets-img" src="Markets-6.png" alt="images/Markets-6"></a> -->
                 </div>
             </div>
 
