--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
   <title>회원가입</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,700'>
   <link rel="stylesheet" href="./signupstyles.css">
-  <link rel="icon" type="favicon" href="favicon-1.png">
+  <link rel="icon" type="favicon" href="images/favicon-1.png">
 </head>
 <!-- partial:index.partial.html -->
 <div class="login-form" style="margin: 120px auto;">
