--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
                 <div class="search">
                 <input type="text" class="search-input"
                 placeholder="오늘의 무 값은?">
-                <button class="search-btn"><a class="search-icon-a" href="index2.html"><img class="search-icon" src="search-icon.png" alt="search-icon"></a></button>
+                <button class="search-btn"><a class="search-icon-a" href="index2.html"><img class="search-icon" src="images/search-icon.png" alt="search-icon"></a></button>
                 </div>
               </div>
 
