--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="Vegetables">
-    <title>Cart savior - Official website</title>
+    <title>Veteran - Official website</title>
 
     <!-- CSS-stylesheets -->
     <link rel="stylesheet" href="styles2.css">
