--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <footer class="bottom-container">
             <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
-            <p class="copyright">© 2022 Veteran - all rights reserved</p>
+            <p class="copyright">© 2022-2023 Veteran - all rights reserved</p>
         </footer>
     </div>
 </body>
