--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                 <div class="search">
                 <input type="text" class="search-input"
                 placeholder="오늘의 무 값은?">
-                <button class="search-btn"><a class="search-icon-a" href="index2.html" target="_blank"><img class="search-icon" src="images/search-icon.png" alt="search-icon"></a></button>
+                <button class="search-btn"><a class="search-icon-a" href="#" target="_blank"><img class="search-icon" src="images/search-icon.png" alt="search-icon"></a></button>
                 </div>
               </div>
             <div class="tag-container">
                 <div class="tag-box"><a class="tag" href="tagpage1.html">#배추</a></div>
                 <div class="tag-box"><a class="tag" href="tagpage2.html">#오이</a></div>
-                <div class="tag-box"><a class="tag" href="index.html">#토마토</a></div>
-                <div class="tag-box"><a class="tag" href="index.html">#사과</a></div>
-                <div class="tag-box"><a class="tag" href="index.html">#바나나</a></div>
+                <div class="tag-box"><a class="tag" href="#">#토마토</a></div>
+                <div class="tag-box"><a class="tag" href="index2.html">#사과</a></div>
+                <div class="tag-box"><a class="tag" href="#">#바나나</a></div>
             </div>
 
             <!-- Search-Box control end -->
